update changelog for v0.1.10 and v0.1.11, update distribution sizes in docs